@@ -4,7 +4,7 @@
 
   <groupId>com.salesforce.cip</groupId>
   <artifactId>cip-client-dataconnector</artifactId>
-  <version>0.1.0</version>
+  <version>0.1.1</version>
   <packaging>jar</packaging>
 
   <name>cip-client-dataconnector</name>
@@ -14,6 +14,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
       <javaVersion>17</javaVersion>
       <javaFormatter.plugin.version>2.11.0</javaFormatter.plugin.version>
+      <jacoco.version>0.8.12</jacoco.version>
   </properties>
 
     <build>
@@ -71,6 +72,100 @@
                 </executions>
             </plugin>
             <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>${jacoco.version}</version>
+                <executions>
+                    <execution>
+                        <id>default-prepare-agent</id>
+                        <goals>
+                            <goal>prepare-agent</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>default-prepare-agent-integration</id>
+                        <goals>
+                            <goal>prepare-agent-integration</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>default-report-integration</id>
+                        <goals>
+                            <goal>report-integration</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>default-report</id>
+                        <phase>prepare-package</phase>
+                        <goals>
+                            <goal>prepare-agent</goal>
+                            <goal>report</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>default-check</id>
+                        <goals>
+                            <goal>check</goal>
+                        </goals>
+                        <configuration>
+                            <rules>
+                                <!-- implementation is needed only for Maven 2 -->
+                                <rule implementation="org.jacoco.maven.RuleConfiguration">
+                                    <element>BUNDLE</element>
+                                    <limits>
+                                        <!-- implementation is needed only for Maven 2 -->
+                                        <limit implementation="org.jacoco.report.check.Limit">
+                                            <counter>COMPLEXITY</counter>
+                                            <value>COVEREDRATIO</value>
+                                            <minimum>0.10</minimum>
+                                        </limit>
+                                    </limits>
+                                </rule>
+                            </rules>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>jacoco-report-aggregate</id>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>report-aggregate</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.3.1</version>
+                <configuration>
+                    <testFailureIgnore default-value="false">false</testFailureIgnore>
+                    <argLine>--add-opens=java.base/java.lang=ALL-UNNAMED
+                        -javaagent:${settings.localRepository}/org/jacoco/org.jacoco.agent/${jacoco.version}/org.jacoco.agent-${jacoco.version}-runtime.jar=destfile=target/jacoco.exec
+                    </argLine>
+                    <skip>false</skip>
+                    <includes>
+                        <include>**/*/*Test.java</include>
+                        <include>**/*/*IT.java</include>
+                        <include>**/_*.java</include>
+                    </includes>
+                    <excludes>
+                        <exclude>**/*$*.*</exclude>
+                        <exclude>**/GwtTest*.*</exclude>
+                    </excludes>
+                    <systemProperties>
+                        <property>
+                            <name>EXECUTOR_NUMBER</name>
+                            <value>${env.EXECUTOR_NUMBER}</value>
+                        </property>
+                        <property>
+                            <name>emma.rt.control</name>
+                            <value>false</value>
+                        </property>
+                    </systemProperties>
+                    <forkCount>1</forkCount>
+                </configuration>
+            </plugin>
+            <plugin>
                 <groupId>com.amashchenko.maven.plugin</groupId>
                 <artifactId>gitflow-maven-plugin</artifactId>
                 <version>1.21.0</version>
@@ -78,7 +173,6 @@
                     <skipFeatureVersion>true</skipFeatureVersion>
                 </configuration>
             </plugin>
-
         </plugins>
     </build>
 
